[package]
name = "trojan-lite"
version = "0.1.0"
authors = ["tianenchen <cteeye@gmail.com>"]
edition = "2018"

[features]
default = ["multi-threaded"]

multi-threaded = ["tokio/rt-multi-thread"]

perf = ["tokio-rustls/dangerous_configuration"]


[dependencies]
tokio = { version = "1.2" , features = ["net","io-util","rt","macros"] }
tokio-util = { version = "0.6" , features = ["codec"]}
tokio-rustls =  "0.22"
bytes = "1.0"
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
argh = "0.1"
once_cell = "1.5"

socket2 = "0.3"

trust-dns-resolver = { version = "0.20" , features = ["dns-over-rustls"] }

tonic = { version = "0.4", features = ["tls"] }
prost = "0.7"
futures = { version = "0.3", default-features = false , features=["std"] }
sha2 = "0.9"
hex = "0.4"

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }

[[bin]]
name = "trojan-server"
path = "src/bin/server.rs"

[[bin]]
name = "trojan-perf"
path = "src/bin/perf.rs"
required-features = ["perf"]